feat(review): introduce EvidenceKey record for type-safe deduplication and enhance similarity processing logic